# libm

./: CMakeLists.txt  LICENSE  README.md
include/long/: long_fixed.hpp  long_fixed_math.hpp
tests/: binary128_q.hpp  test_long_fixed.cpp  test_long_fixed_quad.cpp  test_performance.cpp
